--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -132,6 +132,67 @@
     "\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 회의실 배정 (그리디)\n",
+    "\n",
+    "# 그리디는 기본적으로 정렬과 같이 풀이에 들어가야한다고 한다.\n",
+    "\n",
+    "# 회의가 끝나는 시간 기준으로 정렬을 한다.\n",
+    "# 튜플을 정렬 후 처음부터 회의가 끝나는 시간과 다음 시작시간을 비교하여 회의 수를 출력한다.\n",
+    "\n",
+    "# 컨셉은 회의 종료시간이 가장 작은값을 기준으로 시작하여 다음값을 순차적으로 진행하여 cnt를 구하는 것\n",
+    "\n",
+    "n = int(input())\n",
+    "body = []\n",
+    "for _ in range(n):\n",
+    "    s, e = map(int, input().split())\n",
+    "    body.append((s, e))\n",
+    "\n",
+    "body.sort(key = lambda x: (x[1], x[0]))  # x[1]을 기준으로 정렬하고 , x[0]을 두번째 기준으로 정렬\n",
+    "\n",
+    "et = 0\n",
+    "cnt = 0\n",
+    "for s, e in body:\n",
+    "    if s >= et:\n",
+    "        et = e\n",
+    "        cnt += 1\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 씨름선수 (그리디)\n",
+    "\n",
+    "# 키 or 몸무게 중 오름차순으로 정렬하고 최대값을 갱신한곳에서 카운트해준다.\n",
+    "\n",
+    "n = int(input())\n",
+    "body = []\n",
+    "for _ in range(n):\n",
+    "    s, e = map(int, input().split())\n",
+    "    body.append((s, e))\n",
+    "\n",
+    "body.sort(reverse=True) \n",
+    "\n",
+    "largest = 0\n",
+    "cnt = 0\n",
+    "\n",
+    "for x, y in body:\n",
+    "    if y > largest:\n",
+    "        largest = y\n",
+    "        cnt += 1\n",
+    "\n",
+    "print(cnt)"
+   ]
   }
  ],
  "metadata": {
@@ -150,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
