--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/exercise.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/exercise.ipynb
@@ -192,6 +192,101 @@
     "\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 회의실 배정(그리디)\n",
+    "\n",
+    "# 회의의 처음시간과 끝시간을 검색해서 cnt가 가장 높은 것을 출력하면 될거 같다.\n",
+    "\n",
+    "# 튜플을 사용하면 될듯?\n",
+    "\n",
+    "n = int(input())\n",
+    "arr = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    p, k = map(int, input().split())\n",
+    "    arr.append((p, k))\n",
+    "\n",
+    "\n",
+    "# n = 5\n",
+    "# arr = [(1, 4), (2, 3), (3, 5), (4, 6), (5, 7)]\n",
+    "\n",
+    "cnt = 0\n",
+    "for i in range(n):\n",
+    "    tempCnt = 1\n",
+    "    closeTime = arr[i][1]\n",
+    "    loopCount = 0\n",
+    "    while loopCount < n:\n",
+    "        loopCount += 1\n",
+    "        for j in range(i, n):\n",
+    "            if closeTime == arr[j][0]:\n",
+    "                tempCnt += 1\n",
+    "                closeTime = arr[j][1]\n",
+    "    if cnt < tempCnt:\n",
+    "        cnt = tempCnt\n",
+    "\n",
+    "print(cnt)\n",
+    "\n",
+    "# 통과 못함 (시간초과 - 모든 값을 다 검색해서 가야하는 것이 아니라는 것에 초점을 맞추자) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(170, 72), (180, 70), (172, 67), (183, 65), (181, 60)]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 씨름 선수 (그리디)\n",
+    "# 키, 몸무게 중 하나의 기준을 잡고 비교하면 될거 같다.\n",
+    "\n",
+    "# n = int(input())\n",
+    "# a = []\n",
+    "\n",
+    "# for _ in range(n):\n",
+    "#     h, w = map(int, input().split())\n",
+    "#     a.append((h, w))\n",
+    "\n",
+    "n = 5\n",
+    "a = [(172, 67), (183, 65), (180, 70), (170, 72), (181, 60)]\n",
+    "\n",
+    "a.sort(key = lambda x: x[1], reverse=True)    # 몸무게로 정렬함 (오름차순으로 정렬...)\n",
+    "print(a)\n",
+    "\n",
+    "# [(181, 60), (183, 65), (172, 67), (180, 70), (170, 72)]\n",
+    "\n",
+    "# 하나하나 비교해야 하나 위에서부터 아래로 가면서 비교하면 될거 같다.\n",
+    "\n",
+    "cnt = 0             # 몸무게가 가장 큰 사람\n",
+    "height = 200        # 이전 값을 저장하기 위한 변수 (처음사람은 몸무게가 가장 무거우므로 무조건 들어가게 만들어준다.)\n",
+    "for h, w in a:\n",
+    "    if h < height:\n",
+    "        cnt += 1\n",
+    "    height = h\n",
+    "\n",
+    "print(cnt)"
+   ]
   }
  ],
  "metadata": {
@@ -210,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
