Python/그리디/창고정리

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -167,19 +167,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 씨름선수 (그리디)\n",
     "\n",
-    "# 키 or 몸무게 중 오름차순으로 정렬하고 최대값을 갱신한곳에서 카운트해준다.\n",
+    "# 키 or 몸무게 중 오름차순으로 정렬하고 최대값을 갱신한다는 생각으로 진행\n",
     "\n",
-    "n = int(input())\n",
-    "body = []\n",
-    "for _ in range(n):\n",
-    "    s, e = map(int, input().split())\n",
-    "    body.append((s, e))\n",
+    "# n = int(input())\n",
+    "# body = []\n",
+    "# for _ in range(n):\n",
+    "#     s, e = map(int, input().split())\n",
+    "#     body.append((s, e))\n",
+    "\n",
+    "n = 5\n",
+    "body = [(172, 67), (183, 65), (180, 70), (170, 72), (181, 60)]\n",
     "\n",
     "body.sort(reverse=True) \n",
     "\n",
@@ -192,6 +203,38 @@
     "        cnt += 1\n",
     "\n",
     "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 창고 정리 (그리디)\n",
+    "\n",
+    "# L = int(input())\n",
+    "# a = list(map(int, input().split()))\n",
+    "# m = int(input())\n",
+    "L = 10\n",
+    "a = [69, 42, 68, 76, 40, 87, 14, 65, 76, 81]\n",
+    "m = 50\n",
+    "\n",
+    "a.sort()\n",
+    "for _ in range(m):\n",
+    "    a[0] += 1\n",
+    "    a[L - 1] -= 1\n",
+    "    a.sort()        # sort하여 정렬하면 큰수 작은수가 다시 정렬됨\n",
+    "\n",
+    "print(a[L - 1] - a[0])"
    ]
   }
  ],
