--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/exercise.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/exercise.ipynb
@@ -287,6 +287,92 @@
     "\n",
     "print(cnt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 40, 42, 65, 68, 69, 76, 76, 81, 87]\n",
+      "result :  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 창고정리\n",
+    "\n",
+    "# max의 인덱스를 가져와 값에 1을 뺴고 min의 인덱스를 가져와 값에 1을 더한다. ?\n",
+    "\n",
+    "# n = int(input())\n",
+    "# arr = list(map(int, input().split()))\n",
+    "# m = int(input())\n",
+    "\n",
+    "\n",
+    "# 중복된 값을 어떻게 처리할지 고민해야함\n",
+    "def findIndexByBinarySearch(value, s, e, arr):\n",
+    "    result = 0\n",
+    "    while s <= e:\n",
+    "        mid = (s + e) // 2\n",
+    "        if value == arr[mid]:\n",
+    "            result = mid\n",
+    "            break\n",
+    "        elif value < arr[mid]:\n",
+    "            e = mid - 1\n",
+    "        else:\n",
+    "            s = mid + 1\n",
+    "    return result;\n",
+    "\n",
+    "def findMaxValue(arr):\n",
+    "    result = 0\n",
+    "    for value in arr:\n",
+    "        if result < value:\n",
+    "            result = value\n",
+    "    return result\n",
+    "\n",
+    "def findMinValue(arr):\n",
+    "    result = 2150000\n",
+    "    for value in arr:\n",
+    "        if result > value:\n",
+    "            result = value\n",
+    "    return result\n",
+    "\n",
+    "n = 10\n",
+    "arr = [69, 42, 68, 76, 40, 87, 14, 65, 76, 81]\n",
+    "m = 50\n",
+    "\n",
+    "arr.sort()\n",
+    "print(arr)\n",
+    "# 컨셉 : 큰수와 작은수의 인덱스를 찾은 후 값을 각각, + 1, -1을 해준다. \n",
+    "\n",
+    "for _ in range(m):\n",
+    "    maxValue = findMaxValue(arr)\n",
+    "    minValue = findMinValue(arr)\n",
+    "    maxValueIndex = arr.index(maxValue)\n",
+    "    minValueIndex = arr.index(minValue)\n",
+    "    # maxValueIndex = findIndexByBinarySearch(maxValue, 0, len(arr) - 1, arr)\n",
+    "    # minValueIndex = findIndexByBinarySearch(minValue, 0, len(arr) - 1, arr)\n",
+    "    \n",
+    "    # print(\"maxValueIndex : \", maxValueIndex)\n",
+    "    # print(\"minValueIndex : \", minValueIndex)\n",
+    "\n",
+    "    arr[maxValueIndex] = arr[maxValueIndex] - 1\n",
+    "    arr[minValueIndex] = arr[minValueIndex] + 1\n",
+    "\n",
+    "print(\"result : \", findMaxValue(arr) - findMinValue(arr))\n",
+    "\n",
+    "# 너무 어렵게 했다..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
