Python/그리디/침몰하는 타이타닉

--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -262,6 +262,72 @@
     "\n",
     "# 츨처 : https://dojang.io/mod/page/view.php?id=2331"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86\n",
+      "[95, 107, 67, 38, 49, 116, 22, 78, 53, 86]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# queue 구현\n",
+    "\n",
+    "## list를 사용한 queue 구현\n",
+    "queue = [86, 95, 107, 67, 38, 49, 116, 22, 78, 53]\n",
+    "\n",
+    "# pop(index)\n",
+    "value = queue.pop(0)\n",
+    "print(value)                    # 86\n",
+    "\n",
+    "queue.append(value)\n",
+    "print(queue)                    # 맨뒤에 넣기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n",
+      "deque([86, 95, 107, 67, 38, 49, 116, 22, 78, 53])\n",
+      "86\n",
+      "deque([86, 95, 107, 67, 38, 49, 116, 22, 78, 53])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# queue 구현 (deque를 이용한 Queue 구현)\n",
+    "## deque는 앞, 뒤에서 모두 pop, append를 사용할 수 있다.\n",
+    "## 앞에서 pop, append를 하기 위해서는 popleft, appendleft를 사용한다.\n",
+    "queue = [86, 95, 107, 67, 38, 49, 116, 22, 78, 53]\n",
+    "\n",
+    "queue = deque(queue)\n",
+    "\n",
+    "\n",
+    "value = queue.pop()\n",
+    "print(value)\n",
+    "queue.append(value)\n",
+    "print(queue)\n",
+    "\n",
+    "value = queue.popleft()\n",
+    "print(value)\n",
+    "queue.appendleft(value)\n",
+    "print(queue)\n"
+   ]
   }
  ],
  "metadata": {
@@ -280,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
