--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -236,6 +236,132 @@
     "\n",
     "print(a[L - 1] - a[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 침몰하는 타이타닉 (그리디)\n",
+    "\n",
+    "# 정렬 후 처음값과 마지막 값을 더하여 값이 초과하면 무거운거만 pop 후 cnt + 1\n",
+    "# 설명 듣고 구현 시도\n",
+    "\n",
+    "\n",
+    "# n, m = map(int, input().split())\n",
+    "# queue = list(map(int, input().split()))\n",
+    "\n",
+    "n, m = 10, 150\n",
+    "queue = [86, 95, 107, 67, 38, 49, 116, 22, 78, 53]\n",
+    "\n",
+    "queue.sort()\n",
+    "\n",
+    "cnt = 0\n",
+    "while queue:\n",
+    "    w1 = queue[0]\n",
+    "    w2 = queue[-1]\n",
+    "    if m >= w1 + w2:\n",
+    "        queue.pop(0)\n",
+    "        queue.pop()\n",
+    "        cnt += 1\n",
+    "    else:\n",
+    "        queue.pop()\n",
+    "        cnt += 1\n",
+    "\n",
+    "print(cnt)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 침몰하는 타이타닉 (리스트를 사용하는 방식)\n",
+    "\n",
+    "#100 130\n",
+    "#30 78 83 62 51 60 68 115 109 20 38 42 44 43 118 25 46 38 56 87 112 22 21 38 40 44 100 56 52 60 82 70 51 55 32 83 83 91 97 100 95 74 83 89 57 70 22 48 110 68 83 59 45 102 43 23 50 110 33 64 108 44 96 26 44 63 24 96 99 65 70 51 46 60 62 65 109 103 112 115 86 48 87 108 114 117 30 59 40 82 55 80 113 75 112 94 116 38 112 67 \n",
+    "\n",
+    "n, limit = map(int, input().split())\n",
+    "p = list(map(int, input().split()))\n",
+    "\n",
+    "p.sort()\n",
+    "cnt = 0\n",
+    "while p:\n",
+    "    if len(p) == 1:\n",
+    "        cnt += 1\n",
+    "        break\n",
+    "    if p[0] + p[-1] > limit:\n",
+    "        p.pop()\n",
+    "        cnt += 1\n",
+    "    else:\n",
+    "        p.pop(0)\n",
+    "        p.pop()\n",
+    "        cnt += 1\n",
+    "\n",
+    "print(cnt)\n",
+    "\n",
+    "# 리스트를 사용시, 처음 자료를 pop하면 모든 자료를 하나 앞으로 이동시키는 비효울적인 작업을 한다.\n",
+    "# 아래에서는 deque를 사용하여 앞, 뒤 모두에서 자료를 빼고, 넣을수 있으며 자료가 이동하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 침몰하는 타이타닉 (deque를 사용하여 구현)\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "n, limit = map(int, input().split())\n",
+    "p = list(map(int, input().split()))\n",
+    "\n",
+    "p.sort()\n",
+    "p = deque(p)\n",
+    "\n",
+    "cnt = 0\n",
+    "while p:\n",
+    "    if len(p) == 1:\n",
+    "        cnt += 1\n",
+    "        break\n",
+    "    if p[0] + p[-1] > limit:\n",
+    "        p.pop()\n",
+    "        cnt += 1\n",
+    "    else:\n",
+    "        p.popleft()\n",
+    "        p.pop()\n",
+    "        cnt += 1\n",
+    "\n",
+    "print(cnt)"
+   ]
   }
  ],
  "metadata": {
@@ -254,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
