--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/exercise.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/exercise.ipynb
@@ -369,10 +369,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w1 :  118\n",
+      "w1 :  112\n",
+      "w1 :  110\n",
+      "w1 :  108\n",
+      "w1 :  109\n",
+      "w1 :  103\n",
+      "w1 :  112\n",
+      "w1 :  115\n",
+      "w1 :  86\n",
+      "w1 :  80\n",
+      "w1 :  113\n",
+      "w1 :  83\n",
+      "w1 :  89\n",
+      "w1 :  110\n",
+      "w1 :  87\n",
+      "w1 :  108\n",
+      "w1 :  114\n",
+      "w1 :  117\n",
+      "w1 :  112\n",
+      "w1 :  94\n",
+      "w1 :  116\n",
+      "w1 :  115\n",
+      "w1 :  109\n",
+      "w1 :  112\n",
+      "w1 :  70\n",
+      "w1 :  83\n",
+      "w1 :  91\n",
+      "w1 :  97\n",
+      "w1 :  100\n",
+      "w1 :  95\n",
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 침몰하는 타이타닉(그리디)\n",
+    "\n",
+    "# 유람선에 N명의 승객이 타고 있음\n",
+    "# 구명보트는 2명 이하로 탈수 있고, 한개의 보트에는 M kg 이하로 제한\n",
+    "# N명의 승객 몸무게가 주어졌을때 승객 모두가 탈출하기 위한 구명보트의 최소개수를 출력하는 문제\n",
+    "\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "queue = list(map(int, input().split()))\n",
+    "\n",
+    "# n, m = 5, 140\n",
+    "# queue = [90, 50, 70, 100, 60]\n",
+    "# 2명 이하, 140 이하로 제안\n",
+    "\n",
+    "# n, m = 10, 150\n",
+    "# queue = [86, 95, 107, 67, 38, 49, 116, 22, 78, 53]\n",
+    "\n",
+    "cnt = 0\n",
+    "while queue: \n",
+    "    w1 = queue.pop(0)\n",
+    "    prevTW = w1\n",
+    "    for _ in range(len(queue)):\n",
+    "        w2 = queue.pop(0)\n",
+    "        tw = w1 + w2\n",
+    "        if m >= w1 + w2 and prevTW < tw:\n",
+    "            prevTW = tw\n",
+    "\n",
+    "        # 두수의 합이 150이 넘지않는지 확인하기 위해서는\n",
+    "        # 하나의 수를 고르고 고른수부터 다음까지 모든 값을 확인해야 하는거 아닌가?\n",
+    "\n",
+    "        if m >= w1 + w2:\n",
+    "            cnt += 1\n",
+    "            break\n",
+    "        else:\n",
+    "            queue.append(w2)\n",
+    "    else:\n",
+    "        print(\"w1 : \", w1)\n",
+    "        cnt += 1\n",
+    "\n",
+    "print(cnt)\n"
+   ]
   }
  ],
  "metadata": {
@@ -391,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
