Python/그리디/역수열

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 뮤직 비디오\n",
     "\n",
@@ -90,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 마굿간 정하기 (결정 알고리즘)\n",
     "\n",
@@ -167,17 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 씨름선수 (그리디)\n",
     "\n",
@@ -207,17 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 창고 정리 (그리디)\n",
     "\n",
@@ -239,17 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 침몰하는 타이타닉 (그리디)\n",
     "\n",
@@ -283,17 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 침몰하는 타이타닉 (리스트를 사용하는 방식)\n",
     "\n",
@@ -325,17 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 침몰하는 타이타닉 (deque를 사용하여 구현)\n",
     "\n",
@@ -361,6 +305,84 @@
     "        cnt += 1\n",
     "\n",
     "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 증가 수열 만들기 (그리디)\n",
+    "\n",
+    "# 투 포인터 방식으로 접근함\n",
+    "\n",
+    "# 10\n",
+    "# 3 2 10 1 5 4 7 8 9 6\n",
+    "\n",
+    "n = int(input())\n",
+    "a = list(map(int, input().split()))\n",
+    "\n",
+    "lt = 0\n",
+    "rt = n - 1\n",
+    "res = \"\"\n",
+    "last = 0\n",
+    "tmp = []\n",
+    "\n",
+    "while lt <= rt:\n",
+    "    if a[lt] > last:\n",
+    "        tmp.append((a[lt], \"L\"))\n",
+    "    if a[rt] > last:\n",
+    "        tmp.append((a[rt], \"R\"))\n",
+    "    tmp.sort()\n",
+    "    if len(tmp) == 0:\n",
+    "        break\n",
+    "    else:\n",
+    "        res = res + tmp[0][1]\n",
+    "        last = tmp[0][0]\n",
+    "        if tmp[0][1] == 'L':\n",
+    "            lt += 1\n",
+    "        else:\n",
+    "            rt -= 1\n",
+    "    tmp.clear()\n",
+    "\n",
+    "print(len(res))\n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 6, 2, 5, 1, 3, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 역수열 (그리디)\n",
+    "\n",
+    "# n = int(input())\n",
+    "# a = list(map(int, input().split()))\n",
+    "\n",
+    "n = 8\n",
+    "a = [5, 3, 4, 0, 2, 1, 1, 0]\n",
+    "\n",
+    "seq = [0] * n\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if a[i] == 0 and seq[j] == 0:\n",
+    "            seq[j] = i + 1\n",
+    "            break\n",
+    "        elif seq[j] == 0:\n",
+    "            a[i] -= 1\n",
+    "\n",
+    "print(seq)\n"
    ]
   }
  ],
